# SlateQuill

./: .gitignore  .pre-commit-config.yaml  .slateQuill.toml.example  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
src/SlateQuill/: __init__.py  cli.py  config.py  core.py  exceptions.py  html2md.py  security.py  simple_cli.py
src/SlateQuill/plugins/: __init__.py  base.py
tests/fixtures/: test_input.html  test_output.md
